dhall/tests/type-inference/failure/unit/RecordProjectionEmpty.txt
Type error: error: ProjectionMissingEntry
 --> <current file>:1:1
  |
1 | {=}.{ x }
  | ^^^^^^^^^ ProjectionMissingEntry
  |
